--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 swarmkeeper_url = http://localhost:8090
 docker_base_url = unix://var/run/docker.sock
-run_interval = 0 * * * * *
+report_cron_schedule = 0 * * * * *
+cleanup_cron_schedule = 0 * * * * *
 container_cleanup = False
 image_cleanup = False
