--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 swarmkeeper_url = http://localhost:8090
 docker_base_url = unix://var/run/docker.sock
-report_cron_schedule = 0 * * * * *
-cleanup_cron_schedule = 0 * * * * *
+report_cron_schedule = 0 0 4 * * *
+cleanup_cron_schedule = 0 0 6 * * *
 container_cleanup = False
 image_cleanup = False
